--- a/META.yml
+++ b/META.yml
@@ -1,11 +1,15 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         DBIx-Class-RandomStringColumns
-version:      0.02
-version_from: lib/DBIx/Class/RandomStringColumns.pm
-installdirs:  site
-requires:
-    Test::More:                    0.32
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+--- #YAML:1.0
+name:                DBIx-Class-RandomStringColumns
+version:             0.04
+abstract:            Implicit random string columns
+license:             ~
+generated_by:        ExtUtils::MakeMaker version 6.31
+distribution_type:   module
+requires:     
+    Test::More:                    0
+    version:                       0
+meta-spec:
+    url:     http://module-build.sourceforge.net/META-spec-v1.2.html
+    version: 1.2
+author:
+    - Kan Fushihara <kan __at__ mobilefactory.jp>
