--- a/META.yml
+++ b/META.yml
@@ -1,15 +1,16 @@
 --- #YAML:1.0
 name:                DBIx-Class-RandomStringColumns
-version:             0.04
+version:             0.05
 abstract:            Implicit random string columns
 license:             ~
-generated_by:        ExtUtils::MakeMaker version 6.31
+author:              
+    - Kan Fushihara <kan __at__ mobilefactory.jp>
+generated_by:        ExtUtils::MakeMaker version 6.44
 distribution_type:   module
 requires:     
+    String::Random:                0
     Test::More:                    0
     version:                       0
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.2.html
-    version: 1.2
-author:
-    - Kan Fushihara <kan __at__ mobilefactory.jp>
+    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
+    version: 1.3
