--- a/META.yml
+++ b/META.yml
@@ -1,16 +1,21 @@
---- #YAML:1.0
-name:                DBIx-Class-RandomStringColumns
-version:             0.05
-abstract:            Implicit random string columns
-license:             ~
-author:              
-    - Kan Fushihara <kan __at__ mobilefactory.jp>
-generated_by:        ExtUtils::MakeMaker version 6.44
-distribution_type:   module
-requires:     
-    String::Random:                0
-    Test::More:                    0
-    version:                       0
+---
+abstract: 'Implicit random string columns'
+author:
+  - 'Kan Fushihara  C<< <kan __at__ mobilefactory.jp> >>'
+build_requires:
+  Test::More: 0
+distribution_type: module
+generated_by: 'Module::Install version 0.72'
+license: perl
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+  url: http://module-build.sourceforge.net/META-spec-v1.3.html
+  version: 1.3
+name: DBIx-Class-RandomStringColumns
+no_index:
+  directory:
+    - inc
+    - t
+requires:
+  DBIx::Class: 0.08009
+  String::Random: 0.2
+version: 0.06
