--- a/META.yml
+++ b/META.yml
@@ -3,12 +3,14 @@ abstract: 'Implicit random string columns'
 author:
   - 'Kan Fushihara  C<< <kan __at__ mobilefactory.jp> >>'
 build_requires:
-  ExtUtils::MakeMaker: 6.42
-  Test::More: 0
+  ExtUtils::MakeMaker: 6.36
+  Test::Perl::Critic: 0
 configure_requires:
-  ExtUtils::MakeMaker: 6.42
-distribution_type: module
-generated_by: 'Module::Install version 0.91'
+  CPAN::Meta: 0
+  CPAN::Meta::Prereqs: 0
+  Module::Build: 0.38
+dynamic_config: 0
+generated_by: 'Minilla/v0.5.6, CPAN::Meta::Converter version 2.120921'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -16,12 +18,27 @@ meta-spec:
 name: DBIx-Class-RandomStringColumns
 no_index:
   directory:
-    - inc
     - t
+    - xt
+    - inc
+    - share
+    - eg
+    - examples
+    - author
+provides:
+  DBIx::Class::RandomStringColumns:
+    file: lib/DBIx/Class/RandomStringColumns.pm
+    version: 0.08
 requires:
   DBIx::Class: 0.08009
   Filter::Util::Call: 0
   String::Random: 0.2
 resources:
-  license: http://dev.perl.org/licenses/
-version: 0.07
+  bugtracker: https://github.com/kan/p5-dbic-random-string-columns/issues
+  homepage: https://github.com/kan/p5-dbic-random-string-columns
+  repository: git://github.com/kan/p5-dbic-random-string-columns.git
+version: 0.08
+x_contributors:
+  - 'kan <kan@d0d07461-0603-4401-acd4-de1884942a52>'
+  - 'tomi-ru <tomi-ru@d0d07461-0603-4401-acd4-de1884942a52>'
+  - 'Kan Fushihara <kan.fushihara@gmail.com>'
